part1-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  # type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: main
  selector:
    app: nginx
