part1-helm/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    http.port: "443"
spec:
spec:
  backend:
    serviceName: nginx
    servicePort: 80
